--- a/HW_2024_06_25/HW_2024_06_25.md
+++ b/HW_2024_06_25/HW_2024_06_25.md
@@ -864,10 +864,63 @@ ALTER TABLE marvel_characters_temp RENAME TO marvel_characters;
 Вот пять тестовых запросов с использованием `JOIN` для вашей базы данных SQLite, ориентированные на таблицу `MarvelCharacters` и связанные с ней таблицы:
 
 1. **Запрос на соединение информации о персонажах с их полом:**
+SELECT
+    mc.name,
+    s.sex
+FROM
+    MarvelCharacters mc
+    JOIN sex s ON mc.sex_id = s.id;
 2. **Запрос на соединение информации о персонажах с цветом их глаз:**
+SELECT
+    mc.name,
+    ec.eye_color 
+FROM
+    MarvelCharacters mc
+    JOIN eye_color ec ON mc.eye_id = ec.id;
 3. **Запрос на соединение информации о персонажах с цветом волос и статусом жив/мертв:**
+SELECT
+    mc.name,
+    hc.hair_color,
+    ls.living_status 
+FROM
+    MarvelCharacters mc
+    JOIN hair_color hc ON mc.hair_id = hc.id
+    JOIN living_status ls ON mc.alive_id = ls.id;
 4. **Запрос на соединение информации о персонажах с их идентификацией и характером:**
+SELECT
+    mc.name,
+    i.identity,
+    a.alignment 
+FROM
+    MarvelCharacters mc
+    JOIN identity i ON mc.identity_id = i.id 
+    JOIN alignment a ON mc.align_id = a.id;
 5. **Запрос на получение полной информации о персонажах, соединяя все связанные таблицы:**
+SELECT
+    mc.name,
+    mc.align_id,
+    mc.eye_id,
+    mc.gsm_id,
+    mc.hair_id,
+    mc.identity_id,
+    mc.alive_id,
+    mc.sex_id,
+    a.alignment,
+    ec.eye_color,
+    g.GSM,
+    hc.hair_color,
+    i.identity,
+    ls.living_status,
+    s.sex
+FROM
+    MarvelCharacters mc
+    JOIN alignment a ON mc.align_id = a.id
+    JOIN eye_color ec ON mc.eye_id = ec.id
+    JOIN GSM g ON mc.gsm_id = g.id
+    JOIN hair_color hc ON mc.hair_id = hc.id
+    JOIN identity i ON mc.identity_id = i.id
+    JOIN living_status ls ON mc.alive_id = ls.id
+    JOIN sex s ON mc.sex_id = s.id;
 
 Эти запросы позволяют извлекать и соединять данные из разных таблиц, что демонстрирует мощь реляционных баз данных и их способность обеспечивать гибкое управление информацией.
 # Критерии проверки 👌
@@ -877,3 +930,6 @@ ALTER TABLE marvel_characters_temp RENAME TO marvel_characters;
 - Возможность проверить БД тестовыми запросами
 - **ВСЯ РАБОТА СДАЕТСЯ В 1 SQL файле**
 - **ЗАПРОСЫ ЗАКАНЧИВАЮТСЯ НА ;**
+
+
+
