--- a/HW_2024_07_02/HW_2024_07_02.md
+++ b/HW_2024_07_02/HW_2024_07_02.md
@@ -12,45 +12,48 @@
 - **Выборка столбцов:** status, count(id)
 - **Условия отбора:** Группировка по статусу персонажа.
 - **Результат строк:** 
-SELECT
-	living_status.living_status AS status,
-	COUNT(*) AS count
-FROM
-	marvel_characters
-		INNER JOIN living_status ON marvel_characters.alive_id = living_status.id
-GROUP BY
-	living_status.living_status
+SELECT 
+    living_status AS status,
+    COUNT(mc.id) AS cnt
+FROM 
+    MarvelCharacters mc
+INNER JOIN 
+    living_status ON mc.alive_id = living_status.id
+GROUP BY 
+    living_status;
 
 **Задание 2: Среднее количество появлений персонажей с разным цветом глаз**
 - **Описание:** Найдите среднее количество появлений персонажей для каждого цвета глаз. Выведите цвет глаз и среднее количество появлений персонажей с этим цветом глаз.
 - **Выборка столбцов:** color, avg(APPEARANCES)
 - **Условия отбора:** Группировка по цвету глаз.
 - **Результат строк:**
-SELECT
-	eye_color.eye_color AS eye_color,
-	ROUND(AVG(marvel_characters.appearances), 2) AS avg_appearances
-FROM
-	marvel_characters
-		INNER JOIN eye_color ON marvel_characters.eye_id = eye_color.id
-GROUP BY
-	eye_color.eye_color
+SELECT 
+	ec.eye_color AS color,
+	ROUND(AVG(mc.appearances), 2) AS avg_appearances
+FROM 
+	MarvelCharacters mc
+INNER JOIN 
+	eye_color ec ON mc.eye_id = ec.id
+GROUP BY 
+	color;
 
 **Задание 3: Максимальное количество появлений у персонажей с определенным цветом волос**
 - **Описание:** Определите максимальное количество появлений персонажей для каждого цвета волос. Выведите цвет волос и максимальное количество появлений персонажей с этим цветом волос.
 - **Выборка столбцов:** color, max(APPEARANCES)
 - **Условия отбора:** Группировка по цвету волос.
 - **Результат строк:** 
+
 SELECT
-    hair_color.hair_color AS hair_color,
-    MAX(marvel_characters.appearances) AS max_appearances
+    hc.hair_color AS hair_color,
+    MAX(mc.appearances) AS max_appearances
 FROM
-    marvel_characters
-    INNER JOIN
-        hair_color ON marvel_characters.hair_id = hair_color.id
+    MarvelCharacters mc 
+INNER JOIN
+    hair_color hc ON mc.hair_id = hc.id
 WHERE
-	marvel_characters.appearances != ''
+	mc.appearances != ''
 GROUP BY
-    hair_color.hair_color;
+    hc.hair_color;
 
 **Задание 4: Минимальное количество появлений среди персонажей с известной и публичной личностью**
 - **Описание:** Найдите минимальное количество появлений персонажей с "Public Identity". Выведите тип личности и минимальное количество появлений персонажей с этим типом личности.
@@ -58,11 +61,34 @@ GROUP BY
 - **Условия отбора:** Группировка по типу личности, где тип личности - "Public Identity".
 - **Результат строк:** 
 
+SELECT
+    i.identity,
+    MIN(mc.appearances) 
+FROM
+    MarvelCharacters mc
+INNER JOIN 
+    identity i ON mc.identity_id = i.id
+WHERE 
+    i.identity = 'Public Identity'
+GROUP BY
+    i.identity;
+
 **Задание 5: Общее количество персонажей по полу**
 - **Описание:** Подсчитайте количество персонажей для каждого пола. Выведите пол персонажа и количество персонажей каждого пола.
 - **Выборка столбцов:** name, count(id)
 - **Условия отбора:** Группировка по полу персонажа.
 - **Результат строк:** 
+
+SELECT
+    s.sex,
+    COUNT(mc.id) AS character_count
+FROM
+    MarvelCharacters mc
+INNER JOIN
+    sex s ON mc.sex_id = s.id
+GROUP BY
+    s.sex;
+
 
 **Задание 6: Средний год первого появления персонажей с различным типом личности**
 - **Описание:** Найдите средний год первого появления для каждого типа личности. Выведите тип личности и средний год первого появления персонажей с этим типом личности.
@@ -70,29 +96,54 @@ GROUP BY
 - **Условия отбора:** Группировка по типу личности.
 - **Результат строк:** 
 
+SELECT
+    i.identity,
+    ROUND(AVG(mc.year), 0) AS avg_year
+FROM
+    MarvelCharacters mc
+INNER JOIN 
+    identity i ON mc.identity_id = i.id
+GROUP BY
+    i.identity;
+
 **Задание 7: Количество персонажей с разным цветом глаз среди живых**
 - **Описание:** Подсчитайте количество живых персонажей для каждого цвета глаз. Выведите цвет глаз и количество живых персонажей с этим цветом глаз.
 - **Выборка столбцов:** color, count(id)
 - **Условия отбора:** Группировка по цвету глаз, учитывая только живых персонажей.
 - **Результат строк:** 
 
+SELECT
+    ec.eye_color,
+    COUNT(mc.id) AS character_count
+FROM
+    MarvelCharacters mc
+INNER JOIN
+    living_status ls ON mc.alive_id = ls.id
+INNER JOIN
+    eye_color ec ON mc.eye_id = ec.id
+WHERE 
+	ls.living_status = 'Living Characters'
+GROUP BY
+    ec.eye_color;
+
 **Задание 8: Максимальное и минимальное количество появлений среди персонажей с определенным цветом волос**
 - **Описание:** Определите максимальное и минимальное количество появлений персонажей для каждого цвета волос. Выведите цвет волос, максимальное и минимальное количество появлений персонажей с этим цветом волос.
 - **Выборка столбцов:** color, max(APPEARANCES), min(APPEARANCES)
 - **Условия отбора:** Группировка по цвету волос.
 - **Результат строк:** 
-SELECT
-    hair_color.hair_color AS hair_color,
-    MAX(marvel_characters.appearances) AS max_appearances,
-    MIN(marvel_characters.appearances) AS min_appearances
+
+SELECT 
+	hc.hair_color AS color,
+	MAX(mc.appearances) AS max_appearances,
+	MIN(mc.appearances) AS min_appearances
 FROM
-    marvel_characters
-    INNER JOIN
-        hair_color ON marvel_characters.hair_id = hair_color.id
+	MarvelCharacters mc 
+INNER JOIN 
+	hair_color hc ON mc.hair_id = hc.id
 WHERE
-	marvel_characters.appearances != ''
-GROUP BY
-    hair_color.hair_color;
+	mc.appearances != ''
+GROUP BY 
+	hc.hair_color;
 
 **Задание 9: Количество персонажей с различным типом личности среди умерших**
 - **Описание:** Подсчитайте количество умерших персонажей для каждого типа личности. Выведите тип личности и количество умерших персонажей с этим типом личности.
@@ -100,11 +151,35 @@ GROUP BY
 - **Условия отбора:** Группировка по типу личности, учитывая только умерших персонажей.
 - **Результат строк:** 
 
+SELECT
+    i.identity,
+    COUNT(mc.id) AS character_count
+FROM
+    MarvelCharacters mc
+INNER JOIN
+    identity i ON mc.identity_id = i.id
+INNER JOIN 
+	living_status ls ON mc.alive_id = ls.id 
+WHERE 
+	ls.living_status = 'Deceased Characters'
+GROUP BY
+    i.identity;
+
 **Задание 10: Средний год первого появления персонажей с различным цветом глаз**
 - **Описание:** Найдите средний год первого появления для каждого цвета глаз. Выведите цвет глаз и средний год первого появления персонажей с этим цветом глаз.
 - **Выборка столбцов:** color, avg(Year)
 - **Условия отбора:** Группировка по цвету глаз.
 - **Результат строк:** 
+
+SELECT
+    ec.eye_color,
+    ROUND(AVG(mc.year), 0) AS avg_year
+FROM
+    MarvelCharacters mc
+INNER JOIN 
+    eye_color ec ON mc.eye_id = ec.id
+GROUP BY
+    ec.eye_color;
 
 #### Подзапросы
 
@@ -114,17 +189,22 @@ GROUP BY
 - **Условия отбора:** Количество появлений должно быть равно максимальному количеству появлений среди всех персонажей.
 - **Результат строк:** 
 
+SELECT name, MAX(appearances)
+FROM MarvelCharacters
+WHERE appearances != '';
+
 **Задание 12: Персонажи, впервые появившиеся в том же году, что и персонаж с максимальными появлениями**
 - **Описание:** Найдите всех персонажей, которые впервые появились в том же году, что и персонаж с максимальными появлениями. Год первого появления должен совпадать с годом первого появления персонажа с максимальными появлениями.
 - **Выборка столбцов:** name, Year
 - **Условия отбора:** Год первого появления должен совпадать с годом первого появления персонажа с максимальными появлениями.
 - **Результат строк:** 
+
 SELECT name, year
-FROM marvel_characters
+FROM MarvelCharacters mc3 
 WHERE year = (SELECT year
-			  FROM marvel_characters
+			  FROM MarvelCharacters mc 
               WHERE appearances = (SELECT MAX(appearances)
-                                   FROM marvel_characters
+                                   FROM MarvelCharacters mc2 
                                    WHERE appearances != ''))
                                  
 -- через оператор WITH
@@ -133,32 +213,61 @@ WITH max_appearances_character AS (
         name,
         year
     FROM
-        marvel_characters
+        MarvelCharacters
     WHERE
-        appearances = (SELECT MAX(appearances) FROM marvel_characters WHERE appearances != '')
+        appearances = (SELECT MAX(appearances) FROM MarvelCharacters WHERE appearances != '')
 )
 SELECT
-    marvel_characters.name,
-    marvel_characters.year
+    MarvelCharacters.name,
+    MarvelCharacters.year
 FROM
-    marvel_characters
+    MarvelCharacters
         INNER JOIN
-            max_appearances_character ON marvel_characters.year = max_appearances_character.year;
+            max_appearances_character ON MarvelCharacters.year = max_appearances_character.year;
 
 **Задание 13: Персонажи с наименьшим количеством появлений среди живых**
 - **Описание:** Найдите всех живых персонажей, у которых наименьшее количество появлений. Количество появлений должно быть равно минимальному количеству появлений среди живых персонажей.
 - **Выборка столбцов:** name, APPEARANCES
 - **Условия отбора:** Количество появлений должно быть равно минимальному количеству появлений среди живых персонажей.
 
+SELECT mc.name, mc.appearances
+FROM MarvelCharacters mc
+INNER JOIN living_status ls ON mc.alive_id = ls.id
+WHERE ls.living_status = 'Living Characters'
+  AND mc.appearances = (SELECT MIN(mc2.appearances)
+      					FROM MarvelCharacters mc2
+      					INNER JOIN living_status ls2 ON mc2.alive_id = ls2.id
+      					WHERE ls2.living_status = 'Living Characters'
+						);
+
 **Задание 14: Персонажи с определенным цветом волос и максимальными появлениями среди такого цвета**
 - **Описание:** Найдите персонажей с определенным цветом волос, у которых максимальное количество появлений среди всех персонажей с таким цветом волос. Цвет волос должен совпадать с заданным, количество появлений должно быть равно максимальному количеству появлений среди всех персонажей с таким цветом волос.
 - **Выборка столбцов:** name, color, APPEARANCES
 - **Условия отбора:** Цвет волос должен совпадать с заданным, количество появлений должно быть равно максимальному количеству появлений среди всех персонажей с таким цветом волос.
 
+SELECT mc.name, hc.hair_color, mc.appearances
+FROM MarvelCharacters mc
+INNER JOIN hair_color hc ON mc.hair_id = hc.id
+WHERE hc.hair_color = 'Strawberry Blond Hair'
+AND mc.appearances = (SELECT MAX(mc.appearances)
+					  FROM MarvelCharacters mc
+					  INNER JOIN hair_color hc ON mc.hair_id = hc.id
+					  WHERE hc.hair_color = 'Strawberry Blond Hair'
+					 );
+
 **Задание 15: Персонажи с публичной личностью и наименьшим количеством появлений**
 - **Описание:** Найдите всех персонажей с "Public Identity", у которых наименьшее количество появлений. Тип личности должен быть "Public Identity", количество появлений должно быть равно минимальному количеству появлений среди всех персонажей с такой личностью.
 - **Выборка столбцов:** name, identity, APPEARANCES
 - **Условия отбора:** Тип личности должен быть "Public Identity", количество появлений должно быть равно минимальному количеству появлений среди всех персонажей с такой личностью.
+
+SELECT mc.name, i.identity, mc.appearances
+FROM MarvelCharacters mc
+INNER JOIN identity i ON mc.identity_id = i.id 
+WHERE i.identity = 'Public Identity' 
+AND mc.appearances = (SELECT MIN(mc.appearances)
+					  FROM MarvelCharacters mc
+					  INNER JOIN identity i ON mc.identity_id = i.id 
+					  WHERE i.identity = 'Public Identity');
 
 #### Операции обновления, добавления и удаления данных
 
@@ -167,15 +276,34 @@ FROM
 - **Условия отбора:** Статус персонажей должен быть "Deceased Characters".
 - **Действие:** Обновить статус на "Living Characters".
 
+UPDATE MarvelCharacters
+SET alive_id = (
+    SELECT ls.id
+    FROM living_status ls
+    WHERE ls.living_status = 'Living Characters'
+)
+WHERE alive_id = (
+    SELECT ls.id
+    FROM living_status ls
+    WHERE ls.living_status = 'Deceased Characters'
+);
+
+
 **Задание 17: Добавление нового персонажа**
 - **Описание:** Добавьте нового персонажа в базу данных. Укажите все необходимые поля. Новый персонаж должен иметь уникальное имя и urlslug. Укажите соответствующие значения для всех других полей.
 - **Условия отбора:** Новый персонаж должен иметь уникальное имя и urlslug. Укажите соответствующие значения для всех других полей.
 - **Действие:** Добавить нового персонажа.
 
+INSERT INTO MarvelCharacters (name, urlslug, identity_id, align_id, eye_id, hair_id, sex_id, alive_id, appearances, year)
+VALUES ('New Character', 'new-character-urlslug', 1, 2, 1, 7, 2, 1, 10, 2024);
+
 **Задание 18: Удаление персонажей с нулевыми появлениями**
 - **Описание:** Удалите всех персонажей, у которых количество появлений равно нулю. Количество появлений должно быть равно нулю.
 - **Условия отбора:** Количество появлений должно быть равно нулю.
 - **Действие:** Удалить персонажей.
+
+DELETE FROM MarvelCharacters
+WHERE appearances = '' OR appearances IS NULL;
 
 **Задание 19: Обновление цвета волос персонажей**
 - **Описание:** Обновите цвет волос всех персонажей с "Strawberry
@@ -184,10 +312,25 @@ FROM
 - **Условия отбора:** Цвет волос персонажей должен быть "Strawberry Blond Hair".
 - **Действие:** Обновить цвет волос на "Blond Hair".
 
+UPDATE MarvelCharacters
+SET hair_id = (
+    SELECT hc.id
+    FROM hair_color hc
+    WHERE hc.hair_color = 'Blond Hair'
+)
+WHERE hair_id = (
+    SELECT hc.id
+    FROM hair_color hc
+    WHERE hc.hair_color = 'Strawberry Blond Hair'
+);
+
 **Задание 20: Добавление нового статуса**
 - **Описание:** Добавьте новый статус "Unknown Status" в таблицу статусов. Новый статус должен быть уникальным.
 - **Условия отбора:** Новый статус должен быть уникальным.
 - **Действие:** Добавить новый статус.
+
+INSERT INTO living_status (living_status)
+VALUES ('Unknown Status');
 
 # Критерии проверки 👌
 
